--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NULL GNU/Linux | Everything is your choice.</title>
     <style>
+        @font-face {
+            font-family: 'IBM Plex Mono';
+            src: url('/IBMPlexMono-Regular.ttf.ttf') format('truetype');
+        }
         * {
             margin: 0;
             padding: 0;
