feat: update footer and new feature box

--- a/index.html
+++ b/index.html
@@ -296,6 +296,10 @@
                     <h3>[ NULL COMPROMISE ]</h3>
                     <p>Choose which packages you want from source and which binary builds. Powered by Pkglet (optional!)</p>
                 </div>
+                <div class="feature-box">
+                    <h3>[ NULL MODULES ]</h3>
+                    <p>NULL provides a static kernel. no /lib/modules shenanigans.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -341,7 +345,7 @@
 
     <footer>
         <div class="container">
-            <p>NULL GNU/Linux © 2025 | Licensed under MIT.</p>
+            <p>From the lead developer of <a href="https://obsidianos.xyz">ObsidianOS</a> | Licensed under MIT.</p>
             <p style="margin-top: 10px;">Everything is your choice. Even NULL itself.</p>
         </div>
     </footer>
